# wekws

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: doc.yml
docs/: conf.py  index.rst
examples/hey_snips/s0/: README.md  run.sh
examples/hey_snips/s0/conf/: ds_tcn.yaml  mdtc_small.yaml
examples/hey_snips/s0/local/: prepare_data.py  snips_data_extract.sh
examples/hi_xiaowen/s0/: README.md  run.sh  run_ctc.sh  run_fsmn_ctc.sh
examples/hi_xiaowen/s0/conf/: ds_tcn.yaml  ds_tcn_ctc.yaml  ds_tcn_ctc_base.yaml  fsmn_ctc.yaml  gru.yaml  mdtc.yaml  mdtc_small.yaml  tcn.yaml
examples/hi_xiaowen/s0/local/: mobvoi_data_download.sh  prepare_data.py
examples/speechcommand_v1/s0/: README.md  kws  path.sh  run.sh  wekws
examples/speechcommand_v1/s0/conf/: mdtc.yaml
examples/speechcommand_v1/s0/local/: data_download.sh  prepare_speech_command.py  split_dataset.py
kws/dataset/: dataset.py  processor.py
kws/model/: ce.py  classifier.py  kws_model.py  loss.py  max_pooling.py  max_pooling_RHE.py  mdtc.py  subsampling.py  tcn.py
kws/utils/: checkpoint.py  executor.py  mask.py
learnkws/: learn_mask.py  test_learn.py
runtime/android/: README.md  settings.gradle
runtime/android/app/: build.gradle
runtime/android/app/src/main/: AndroidManifest.xml
runtime/android/app/src/main/assets/: kws.ort
runtime/android/app/src/main/cpp/: CMakeLists.txt  kws  wekws.cc
runtime/android/app/src/main/res/layout/: activity_main.xml
runtime/android/app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
runtime/android/app/src/main/res/values-night/: themes.xml
runtime/android/gradle/wrapper/: gradle-wrapper.properties
runtime/core/cmake/: onnxruntime.cmake
runtime/core/frontend/: CMakeLists.txt  fbank.h  feature_pipeline.h  wav.h
runtime/core/kws/: CMakeLists.txt  keyword_spotting.cc  keyword_spotting.h
runtime/core/utils/: log.h
runtime/onnxruntime/: CMakeLists.txt  README.md  kws
runtime/raspberrypi/: CMakeLists.txt  README.md  kws  toolchains
tools/: compute_cmvn_stats.py  make_list.py  make_lmdb.py  shuffle_list.py  trim_sil.sh
wekws/dataset/: dataset.py  init_dataset.py  lmdb_data.py  processor.py
wekws/model/: classifier.py  cmvn.py  fsmn.py  kws_model.py  loss.py  mdtc.py  subsampling.py  tcn.py
wekws/utils/: checkpoint.py  cmvn.py  executor.py  train_utils.py
(+5 files in other folders)
